--- a/Everpobre/Info.plist
+++ b/Everpobre/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Permission for localization (Notes)</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Permission for use camera</string>
 	<key>NSCameraUsageDescription</key>
